chore: correct the failed tests

--- a/src/components/Layout/style.css
+++ b/src/components/Layout/style.css
@@ -6,8 +6,8 @@
   }
   
   .navbar {
-    background-color: #343a40;
-    color: #fff;
+    background-color: #fff;
+    color: #343a40;
     padding: 16px;
     display: flex;
     align-items: center;
@@ -24,7 +24,7 @@
   }
   
   .navbar-links a {
-    color: #fff;
+    color: #343a40;
     margin: 0 12px;
     text-decoration: none;
     font-weight: bold;
